2009-04-28	Chris Johns <chrisj@rtems.org>

	* dlentry/dlentry.S: Update for boot_card command line change.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Use shared tm27.h stub.
	* include/tm27.h: Removed.

2008-09-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/tm27.h: Do not use set_vector.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1322/bsps
	* include/bspopts.h.in: Remove.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, include/bspopts.h.in: Make letting boot_card() handle
	work area allocation mandatory. Rename
	RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to BSP_BOOTCARD_OPTIONS.

2008-09-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, include/bspopts.h.in: Use standardized
	bsp_cleanup() which can optionally print a message, poll for user to
	press key, and call bsp_reset(). Using this eliminates the various
	bsp_cleanup() implementations which had their own implementation and
	variety of string constants.
	* startup/bspclean.c: Removed.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unnecessary boilerplate comments.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>
