@@ -1,56 +1,0 @@
-/*  set_vector
- *
- *  This routine installs an interrupt vector on the target Board/CPU.
- *  This routine is allowed to be as board dependent as necessary.
- *
- *  INPUT:
- *    handler - interrupt handler entry point
- *    vector  - vector number
- *    type    - 0 indicates raw hardware connect
- *              1 indicates RTEMS interrupt connect
- *
- *  RETURNS:
- *    address of previous interrupt handler
- *
- *  Author:	Andrew Bray <andy@i-cubed.co.uk>
- *
- *  COPYRIGHT (c) 1995 by i-cubed ltd.
- *
- *  To anyone who acknowledges that this file is provided "AS IS"
- *  without any express or implied warranty:
- *      permission to use, copy, modify, and distribute this file
- *      for any purpose is hereby granted without fee, provided that
- *      the above copyright notice and this notice appears in all
- *      copies, and that the name of i-cubed limited not be used in
- *      advertising or publicity pertaining to distribution of the
- *      software without specific, written prior permission.
- *      i-cubed limited makes no representations about the suitability
- *      of this software for any purpose.
- *
- *  Derived from c/src/lib/libbsp/no_cpu/no_bsp/startup/setvec.c:
- *
- *  COPYRIGHT (c) 1989-1999.
- *  On-Line Applications Research Corporation (OAR).
- *
- *  The license and distribution terms for this file may be
- *  found in the file LICENSE in this distribution or at
- *  http://www.rtems.com/license/LICENSE.
- *
- *  $Id$
- */
-
-#include <rtems.h>
-#include <bsp.h>
-
-rtems_isr_entry set_vector(                    /* returns old vector */
-  rtems_isr_entry     handler,                  /* isr routine        */
-  rtems_vector_number vector,                   /* vector number      */
-  int                 type                      /* RTEMS or RAW intr  */
-)
-{
-  rtems_isr_entry previous_isr;
-
-  rtems_interrupt_catch( handler, vector, (rtems_isr_entry *) &previous_isr );
-
-  return previous_isr;
-}
