@@ -1,3 +1,8 @@
+2009-07-03	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am: Eliminate unused routine.
+	* startup/setvec.c: Removed.
+
 2009-04-28	Chris Johns <chrisj@rtems.org>
 
 	* dlentry/dlentry.S: Update for boot_card command line change.
